[gd_scene load_steps=4 format=3 uid="uid://cn3htaxdaamcm"]

[ext_resource type="Script" path="res://scenes/ui/win_level_ui.gd" id="1_y154u"]
[ext_resource type="Texture2D" uid="uid://cqilcvoiiyye" path="res://assets/UI Pack - Adventure/PNG/Default/panel_brown_corners_a.png" id="2_wd04k"]
[ext_resource type="Texture2D" uid="uid://1lj1frisu6ym" path="res://assets/UI Pack - Adventure/PNG/Default/banner_classic_curtain.png" id="3_22b2x"]

[node name="WinLevelUI" type="CanvasLayer"]
script = ExtResource("1_y154u")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="BoxContainer" type="VBoxContainer" parent="HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="BoxBrown" type="Control" parent="HFlowContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelBrownDamagedDark" type="NinePatchRect" parent="HFlowContainer/BoxContainer/BoxBrown"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -58.0
offset_right = 182.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wd04k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="winText" type="Label" parent="HFlowContainer/BoxContainer/BoxBrown/PanelBrownDamagedDark"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "ACA SETEAR TEXTO EN _READY()"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Buttons" type="Control" parent="HFlowContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HFlowContainer/BoxContainer/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 64.0
offset_right = 127.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exit" type="Button" parent="HFlowContainer/BoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
text = "Menu principal"

[node name="NextLevel" type="Button" parent="HFlowContainer/BoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
text = "Siguiente nivel"

[node name="Banner" type="Control" parent="HFlowContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BannerHanging" type="NinePatchRect" parent="HFlowContainer/BoxContainer/Banner"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -107.0
offset_right = 162.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_22b2x")
patch_margin_left = 20
patch_margin_right = 20

[node name="titleText" type="RichTextLabel" parent="HFlowContainer/BoxContainer/Banner/BannerHanging"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -20.5
offset_right = 122.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][tornado radius=1 freq=10][color=white] [b]Â¡Lograste el objetivo![/b] [/color][/tornado][/center]"
scroll_active = false

[connection signal="button_down" from="HFlowContainer/BoxContainer/Buttons/HBoxContainer/Exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="HFlowContainer/BoxContainer/Buttons/HBoxContainer/NextLevel" to="." method="_on_next_level_button_down"]
